--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ejemplo de un rest server conectado a MongoDB",
   "main": "app.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan Francisco Toledo",
